# crud

./: .gitignore  Main.hs  crud.cabal  example.env  flake.nix
src/: Crud.hs
src/Crud/: Api.hs  User.hs
src/Crud/Capability/: GenerateUUID.hs  ManageUsers.hs
src/Data/: Email.hs
test/: Test.hs  TestM.hs
